tests/e2e/fail/callback_address_unknown.ep
# COMPILE_ERROR: ptr cannot take the address of unknown function 'missing_callback'

fun main(): void {
    let callback = ptr(missing_callback)
}
